# gh-brickbreak

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
commit_breakout/: __init__.py  animator.py  cli.py  constants.py  game_entities.py  game_state.py  github_client.py  models.py  physics.py  renderer.py
gh_brickbreak/: cli.py  constants.py  strategies.py
tests/: test_game_entities.py
